--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "imagefluency"]
+	path = imagefluency
+	url = https://github.com/stm/imagefluency
+	shallow = true
+	registered = true
